// Schéma 4: Locations & Gestion
// https://dbdiagram.io/

// Tables de référence (pour les relations FK)
Table users {
  id bigint [pk, increment]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table utilisateurs (référence pour les relations FK)'
}

Table products {
  id bigint [pk, increment]
  name varchar(255) [not null]
  price decimal(10,2) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table produits (référence pour les relations FK)'
}

Table cart_locations {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  
  // Dates
  start_date date [not null]
  end_date date [not null]
  rental_days integer [not null]
  
  // Tarification
  daily_rate decimal(10,2) [not null]
  total_rental_cost decimal(10,2) [not null]
  deposit_amount decimal(10,2) [not null]
  tax_rate decimal(5,2) [default: 21.00]
  subtotal decimal(10,2) [not null]
  tax_amount decimal(10,2) [not null]
  total_amount decimal(10,2) [not null]
  total_items integer [default: 0]
  
  // Statut
  status enum('active','abandoned','converted') [default: 'active']
  expires_at timestamp [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Paniers de location d\'équipements'
}

Table cart_item_locations {
  id bigint [pk, increment]
  cart_location_id bigint [ref: > cart_locations.id]
  product_id bigint [ref: > products.id]
  quantity integer [not null]
  daily_rate decimal(10,2) [not null]
  rental_days integer [not null]
  subtotal decimal(10,2) [not null]
  deposit_per_item decimal(10,2) [not null]
  total_deposit decimal(10,2) [not null]
  total_cost decimal(10,2) [not null]
  is_available boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Articles dans les paniers de location'
}

Table order_locations {
  id bigint [pk, increment]
  order_number varchar(255) [unique, not null]
  user_id bigint [ref: > users.id]
  
  // Dates
  start_date date [not null]
  end_date date [not null]
  rental_days integer [not null]
  
  // Tarification
  daily_rate decimal(10,2) [not null]
  total_rental_cost decimal(10,2) [not null]
  deposit_amount decimal(10,2) [not null]
  late_fee_per_day decimal(8,2) [default: 10.00]
  penalty_amount decimal(10,2) [default: 0.00]
  tax_rate decimal(5,2) [default: 21.00]
  subtotal decimal(10,2) [not null]
  tax_amount decimal(10,2) [not null]
  total_amount decimal(10,2) [not null]
  
  // Statuts
  status enum('pending','confirmed','active','completed','closed','overdue','cancelled') [default: 'pending']
  frontend_confirmed boolean [default: false]
  status_updated_at timestamp [null]
  admin_notes text [null]
  
  // Paiement
  payment_method varchar(255) [null]
  payment_status varchar(255) [default: 'pending']
  payment_transaction_id varchar(255) [null]
  stripe_payment_intent varchar(255) [null]
  deposit_authorization_id varchar(255) [null]
  deposit_captured boolean [default: false]
  deposit_captured_at timestamp [null]
  paid_at timestamp [null]
  
  // Facturation
  invoice_number varchar(255) [null]
  invoice_generated boolean [default: false]
  invoice_sent boolean [default: false]
  invoice_file_path varchar(255) [null]
  
  // Emails
  last_completed_email_sent timestamp [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Commandes de location avec gestion complète'
}

Table order_item_locations {
  id bigint [pk, increment]
  order_location_id bigint [ref: > order_locations.id]
  product_id bigint [ref: > products.id]
  
  // Snapshot du produit
  product_name varchar(255) [not null]
  product_description text [null]
  product_image varchar(255) [null]
  
  // Location
  quantity integer [not null]
  daily_rate decimal(10,2) [not null]
  rental_days integer [not null]
  subtotal decimal(10,2) [not null]
  deposit_per_item decimal(10,2) [not null]
  total_deposit decimal(10,2) [not null]
  penalty_amount decimal(10,2) [default: 0.00]
  total_cost decimal(10,2) [not null]
  
  // Statut et retour
  status enum('pending','confirmed','active','returned','overdue','damaged') [default: 'pending']
  return_condition enum('good','damaged','lost') [null]
  return_notes text [null]
  returned_at timestamp [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Articles loués avec suivi de l\'état'
}
